--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ marshmallow==2.17.0
 marshmallow-sqlalchemy==0.15.0
 mccabe==0.6.1
 pylint==2.2.2
+pylint-flask==0.5
+pylint-plugin-utils==0.4
 requests==2.21.0
 six==1.11.0
 SQLAlchemy==1.2.15
